cluster/manifests/gateway-proxy/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-proxy
  labels:
    name: gateway-proxy
    pod-security.kubernetes.io/enforce: restricted
