cluster/manifests/gateway-proxy/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: gateway-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway-proxy
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
  portLevelMtls:
    "9443":
      mode: PERMISSIVE # AdmissionWebhook
