cluster/manifests/gateway-proxy/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: gateway-proxy
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: gateway-proxy
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: ALLOW_ANY # gateway-proxy request to Pod IP
  egress:
    - captureMode: DEFAULT
      hosts:
        - cert-manager/cert-manager-webhook.cert-manager.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
